Refactor array elements to html elements instead of svg, create test for animation, setup quicksort element positioning, auto adjust sizing parameters based on window size on load

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         </nav>
       </div>
       <div id="visualization-area">
-        <h2 class="vis-area-title">Algorithm Title</h2>
+        <h2 class="vis-area-title" id="vis-area-title">Algorithm Title</h2>
+        <div id="drawing-area"></div>
       </div>
     </div>
   </body>
