--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       </div>
       <div id="visualization-area">
         <h2 class="vis-area-title" id="vis-area-title">Algorithm Title</h2>
-        <div id="drawing-area"></div>
+        <div id="drawing-area">
+          <svg id="path-container"></svg>
+        </div>
       </div>
     </div>
   </body>
