Fix document height

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="visualization-area">
         <h2 class="vis-area-title" id="vis-area-title">Algorithm Title</h2>
         <div id="drawing-area">
-          <svg id="path-container"></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" id="path-container"></svg>
         </div>
       </div>
     </div>
