Modify timing and add element color animation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="page-container">
       <div id="sidebar-container">
-        <h3 class="menu-title">Algorithms</h2>
+        <!-- <h3 class="menu-title">Algorithms</h2> -->
         <nav class="algorithms">
 
         </nav>
