Fix layer height, make title font size adjustable

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://use.fontawesome.com/845582e314.js"></script>
     <script type="application/javascript" src="lib/bundle.js"></script>
     <title>Algorithm Visualization</title>
   </head>
   <body>
-    <div id="page-container">
+
+    <div class="page-container">
       <div id="sidebar-container">
         <!-- <h3 class="menu-title">Algorithms</h2> -->
         <nav class="algorithms">
@@ -17,11 +19,24 @@
         </nav>
       </div>
       <div id="visualization-area">
-        <h2 class="vis-area-title" id="vis-area-title">Algorithm Title</h2>
+        <h2 class="vis-area-title" id="vis-area-title"></h2>
         <div id="drawing-area">
           <svg xmlns="http://www.w3.org/2000/svg" id="path-container"></svg>
         </div>
       </div>
     </div>
+
+    <footer>
+      <div class="linkedin-github-container">
+        <a href="https://www.linkedin.com/in/travis-ludlum" class="linkedin-container">
+          <i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
+          LinkedIn
+        </a>
+        <a href="https://github.com/nequalszero" class="github-container">
+          <i class="fa fa-github fa-lg" aria-hidden="true"></i>
+          Github
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
