Update github and linkedin position/style

--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
 
     <footer>
       <div class="linkedin-github-container">
-        <a href="https://www.linkedin.com/in/travis-ludlum" class="linkedin-container">
+        <a href="https://www.linkedin.com/in/travis-ludlum"
+           class="linkedin-container">
           <i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
           LinkedIn
         </a>
-        <a href="https://github.com/nequalszero" class="github-container">
+        <a href="https://github.com/nequalszero"
+           class="github-container">
           <i class="fa fa-github fa-lg" aria-hidden="true"></i>
           Github
         </a>
